k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: email-app
  template:
    metadata:
      labels:
        app: email-app
    spec:
      containers:
        - name: ide-resume-container
          image: hub.medbenmalek.me/personal/email-app:1.0.0
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: harbor-registry-secret
