k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-app-service
spec:
  selector:
    app: email-app
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: NodePort
