k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - email.medbenmalek.me
      secretName: email-app-tls
  rules:
    - host: email.medbenmalek.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: email-app-service
                port:
                  number: 4000
